--- a/ricaun.HelixToolkit.Wpf/ricaun.HelixToolkit.Wpf.csproj
+++ b/ricaun.HelixToolkit.Wpf/ricaun.HelixToolkit.Wpf.csproj
@@ -2,67 +2,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <!--
+    <TargetFrameworks>net45;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    -->
+    <TargetFramework>net45</TargetFramework>
     <OutputType>Library</OutputType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseWPF>true</UseWPF>
-    <LangVersion>9</LangVersion>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <LangVersion>Latest</LangVersion>
+    <AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
     <Configurations>Debug; Release</Configurations>
   </PropertyGroup>
-
-  <!-- RevitVersion -->
-  <Choose>
-    <When Condition="$(Configuration.Contains('2017'))">
-      <PropertyGroup>
-        <RevitVersion>2017</RevitVersion>
-        <TargetFramework>net46</TargetFramework>
-      </PropertyGroup>
-    </When>
-    <When Condition="$(Configuration.Contains('2018'))">
-      <PropertyGroup>
-        <RevitVersion>2018</RevitVersion>
-        <TargetFramework>net46</TargetFramework>
-      </PropertyGroup>
-    </When>
-    <When Condition="$(Configuration.Contains('2019'))">
-      <PropertyGroup>
-        <RevitVersion>2019</RevitVersion>
-        <TargetFramework>net47</TargetFramework>
-      </PropertyGroup>
-    </When>
-    <When Condition="$(Configuration.Contains('2020'))">
-      <PropertyGroup>
-        <RevitVersion>2020</RevitVersion>
-        <TargetFramework>net47</TargetFramework>
-      </PropertyGroup>
-    </When>
-    <When Condition="$(Configuration.Contains('2021'))">
-      <PropertyGroup>
-        <RevitVersion>2021</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-      </PropertyGroup>
-    </When>
-    <When Condition="$(Configuration.Contains('2022'))">
-      <PropertyGroup>
-        <RevitVersion>2022</RevitVersion>
-        <TargetFramework>net48</TargetFramework>
-      </PropertyGroup>
-    </When>
-    <Otherwise>
-      <PropertyGroup>
-        <RevitVersion>2015</RevitVersion>
-        <TargetFramework>net45</TargetFramework>
-      </PropertyGroup>
-    </Otherwise>
-  </Choose>
 
   <!-- Release -->
   <PropertyGroup Condition="!$(Configuration.Contains('Debug'))">
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>Revit$(RevitVersion)</DefineConstants>
+    <DefineConstants></DefineConstants>
     <NoWarn>MSB3052</NoWarn>
     <DebugType>None</DebugType>
   </PropertyGroup>
@@ -71,18 +29,18 @@
   <PropertyGroup Condition="$(Configuration.Contains('Debug'))">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;Revit$(RevitVersion)</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>Full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup>
     <PackageId>ricaun.HelixToolkit.Wpf</PackageId>
-    <Version>2.20.2</Version>
+    <Version>2.23.0</Version>
     <ProjectGuid>{1dd7c96c-9b97-4e6f-97f0-6065d701acd4}</ProjectGuid>
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageAssemblyVersion></PackageAssemblyVersion>
+    <PackageAssemblyVersion>.$(Version)</PackageAssemblyVersion>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.Contains('Debug'))">
     <Revision>$([System.DateTime]::Now.ToString('ffff'))</Revision>
@@ -112,17 +70,21 @@
     <PackageIconUrl />
   </PropertyGroup>
 
+  <!--
   <PropertyGroup Condition="!$(Configuration.Contains('Debug'))">
     <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
+  -->
 
   <PropertyGroup Condition="$(Configuration.Contains('Debug'))">
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="HelixToolkit.Wpf" Version="2.20.2" IncludeAssets="build; compile" PrivateAssets="All" />
-    <PackageReference Include="Revit_All_Main_Versions_API_x64" Version="$(RevitVersion).*" IncludeAssets="build; compile" PrivateAssets="All" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+    <PackageReference Include="HelixToolkit.Wpf" Version="$(Version)" IncludeAssets="build; compile" PrivateAssets="All" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
+    <PackageReference Include="HelixToolkit.Core.Wpf" Version="$(Version)" IncludeAssets="build; compile" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
