--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,18 +1,20 @@
 # ------------------------------------------------------------------------------
-# Publish.yml
+# Build.yml
 # ------------------------------------------------------------------------------
 
-name: Publish
+name: Build
 
 on:
   push:
-    branches:
+  pull_request:
+    branches-ignore:
       - master
+      - main
   workflow_dispatch:
 
 jobs:
-  Publish:
-    name: Publish
+  Build:
+    name: Build
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v1
@@ -22,5 +24,4 @@ jobs:
           GitHubToken: ${{ secrets.GITHUB_TOKEN }}
           SignFile: ${{ secrets.SIGN_FILE }}
           SignPassword: ${{ secrets.SIGN_PASSWORD }}
-          NugetApiUrl: ${{ secrets.NUGET_API_URL }}
-          NugetApiKey: ${{ secrets.NUGET_API_KEY }}
+          InstallationFiles: ${{ secrets.INSTALLATION_FILES }}
