--- a/ricaun.HelixToolkit.Wpf/ricaun.HelixToolkit.Wpf.csproj
+++ b/ricaun.HelixToolkit.Wpf/ricaun.HelixToolkit.Wpf.csproj
@@ -2,11 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!--
     <TargetFrameworks>net45;netcoreapp3.1</TargetFrameworks>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    -->
-    <TargetFramework>net45</TargetFramework>
     <OutputType>Library</OutputType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseWPF>true</UseWPF>
@@ -14,6 +10,13 @@
     <AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
     <Configurations>Debug; Release</Configurations>
+  </PropertyGroup>
+
+  <!-- Net Core -->
+  <PropertyGroup Condition="!$(TargetFramework.StartsWith('net4'))">
+    <EnableDynamicLoading>true</EnableDynamicLoading>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    <GenerateDependencyFile>false</GenerateDependencyFile>
   </PropertyGroup>
 
   <!-- Release -->
@@ -36,7 +39,7 @@
   <PropertyGroup>
     <PackageId>ricaun.HelixToolkit.Wpf</PackageId>
     <Version>2.23.0</Version>
-    <ProjectGuid>{1dd7c96c-9b97-4e6f-97f0-6065d701acd4}</ProjectGuid>
+    <HelixToolkitVersion>2.23.0</HelixToolkitVersion>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -70,28 +73,36 @@
     <PackageIconUrl />
   </PropertyGroup>
 
-  <!--
-  <PropertyGroup Condition="!$(Configuration.Contains('Debug'))">
-    <DocumentationFile>$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile >
   </PropertyGroup>
-  -->
-
+  
   <PropertyGroup Condition="$(Configuration.Contains('Debug'))">
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-    <PackageReference Include="HelixToolkit.Wpf" Version="$(Version)" IncludeAssets="build; compile" PrivateAssets="All" />
+    <PackageReference Include="HelixToolkit.Wpf" Version="$(HelixToolkitVersion)" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
-    <PackageReference Include="HelixToolkit.Core.Wpf" Version="$(Version)" IncludeAssets="build; compile" PrivateAssets="All" />
+    <PackageReference Include="HelixToolkit.Core.Wpf" Version="$(HelixToolkitVersion)" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ILRepack.MSBuild.Task" Version="*" IncludeAssets="build; compile" PrivateAssets="All" />
+    <PackageReference Include="ricaun.ILRepack" Version="*">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
+  <PropertyGroup>
+    <ILRepackCommandExtra>/xmldocs</ILRepackCommandExtra>
+  </PropertyGroup>
 
-  <Target Name="ILRepacker" AfterTargets="Build">
+  <!--<ItemGroup>
+    <PackageReference Include="ILRepack.MSBuild.Task" Version="*" IncludeAssets="build; compile" PrivateAssets="All" />
+  </ItemGroup>-->
+
+  <!--<Target Name="ILRepacker" AfterTargets="Build">
     <PropertyGroup>
       <WorkingDirectory>$(MSBuildThisFileDirectory)$(OutDir)</WorkingDirectory>
     </PropertyGroup>
@@ -99,17 +110,17 @@
       <InputAssemblies Include="$(TargetPath)" />
       <InputAssemblies Include="@(ReferencePathWithRefAssemblies)" Condition="'%(filename)' == 'HelixToolkit.Wpf'" />
       <InputAssemblies Include="@(ReferencePathWithRefAssemblies)" Condition="'%(filename)' == 'HelixToolkit'" />
-      <!-- 
-      -->
+      --><!-- 
+      --><!--
     </ItemGroup>
 
     <ItemGroup>
-      <!-- Must be a fully qualified name -->
+      --><!-- Must be a fully qualified name --><!--
       <DoNotInternalizeAssemblies Include="ExampleAssemblyToMerge3" />
     </ItemGroup>
 
-    <!-- https://github.com/peters/ILRepack.MSBuild.Task/blob/master/src/ILRepack.MSBuild.Task/ILRepack.cs -->
+    --><!-- https://github.com/peters/ILRepack.MSBuild.Task/blob/master/src/ILRepack.MSBuild.Task/ILRepack.cs --><!--
     <ILRepack XmlDocumentation="true" AllowDuplicateResources="true" Union="false" DebugInfo="true" CopyAttributes="true" AllowMultiple="true" Parallel="true" Internalize="false" OutputType="$(OutputType)" MainAssembly="$(AssemblyName).dll" OutputAssembly="$(AssemblyName).dll" InputAssemblies="@(InputAssemblies)" WilcardInputAssemblies="true" InternalizeExcludeAssemblies="@(InternalizeExcludeAssemblies)" WorkingDirectory="$(WorkingDirectory)" />
-  </Target>
+  </Target>-->
 
 </Project>
