--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>2.25.0</Version>
+    <Version>2.25.0-alpha</Version>
     <HelixToolkitVersion>2.25.0</HelixToolkitVersion>
   </PropertyGroup>
 </Project>
