--- a/ricaun.HelixToolkit.Wpf/ricaun.HelixToolkit.Wpf.csproj
+++ b/ricaun.HelixToolkit.Wpf/ricaun.HelixToolkit.Wpf.csproj
@@ -68,8 +68,13 @@
     <RepositoryUrl>https://github.com/$(GitHubRepositoryOwner)/$(PackageId)</RepositoryUrl>
     <RepositoryType>github</RepositoryType>
     <PackageIcon></PackageIcon>
-    <PackageIconUrl />
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" Visible="false" />
+    <None Include="..\LICENSE" Pack="true" PackagePath="\" Visible="false" />
+  </ItemGroup>
 
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile >
@@ -79,10 +84,10 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
     <PackageReference Include="HelixToolkit.Wpf" Version="$(HelixToolkitVersion)" PrivateAssets="All" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
+  <ItemGroup Condition="!$(TargetFramework.StartsWith('net4'))">
     <PackageReference Include="HelixToolkit.Core.Wpf" Version="$(HelixToolkitVersion)" PrivateAssets="All" />
   </ItemGroup>
 
